--- a/views/Admin/products/add.ejs
+++ b/views/Admin/products/add.ejs
@@ -213,14 +213,14 @@
                 // },
 
                 uploader: {
-                    //url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
-                    url: 'http://localhost:9000/api/uploads'
+                    // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
+                    url: '/api/fileView/uploads'
                 },
                 filebrowser: {
                     // buttons: ['list', 'tiles', 'sort'],
                     ajax: {
                         //url: 'https://xdsoft.net/jodit/connector/index.php'
-                        url: 'http://localhost:9000/api/files'
+                        url: '/api/fileView/files'
                     }
                 },
                 commandToHotkeys: {
@@ -243,14 +243,14 @@
                 },
 
                 // uploader: {
-                //    // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
-                //    url: '/api/uploads'
+                //     // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
+                //     url: 'http://localhost:9000/api/uploads'
                 // },
                 // filebrowser: {
                 //     // buttons: ['list', 'tiles', 'sort'],
                 //     ajax: {
                 //         //url: 'https://xdsoft.net/jodit/connector/index.php'
-                //         url: '/filebrowse/api/files'
+                //         url: 'http://localhost:9000/api/files'
                 //     }
                 // },
                 commandToHotkeys: {
