--- a/views/Admin/products/add.ejs
+++ b/views/Admin/products/add.ejs
@@ -208,21 +208,21 @@
                 observer: {
                     timeout: 100
                 },
-                // uploader: {
-                //   insertImageAsBase64URI: true,
-                // },
-
                 uploader: {
-                    // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
-                    url: '/api/fileView/uploads'
+                    insertImageAsBase64URI: true,
                 },
-                filebrowser: {
-                    // buttons: ['list', 'tiles', 'sort'],
-                    ajax: {
-                        //url: 'https://xdsoft.net/jodit/connector/index.php'
-                        url: '/api/fileView/files'
-                    }
-                },
+
+                // uploader: {
+                //     // url: 'https://xdsoft.net/jodit/connector/index.php?action=fileUpload'
+                //     url: '/api/fileView/uploads'
+                // },
+                // filebrowser: {
+                //     // buttons: ['list', 'tiles', 'sort'],
+                //     ajax: {
+                //         //url: 'https://xdsoft.net/jodit/connector/index.php'
+                //         url: '/api/fileView/files'
+                //     }
+                // },
                 commandToHotkeys: {
                     'openreplacedialog': 'ctrl+p'
                 }
